[v#.#.#] ([month] [YYYY])
  - Forms: Add a combobox for selecting, filtering, and creating options
  - Hera: Add new layout with redesigned navigation
  - Revisions: Show state changes in the revisions view
  - Turbo: Remove turbolinks and add turbo-rails
  - QA:
    - Add View History link when viewing Issues/Content blocks
    - Automatically go to the next record after reviewing
  - Upgraded gems:
    - capybara, net-imap, nokogiri, paper_trail, rack, rails, rails-html-sanitizer, rexml, rspec-rails, selenium-webdriver
  - Bugs fixes:
    - [entity]:
      - [future tense verb] [bug fix]
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - Export: Default export button to 'All' if all records in project are in 'draft' state
  - REST/JSON API enhancements:
    - Nodes:
      - include Node properties
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.15.0 (December 2024)
  - Tags: Add custom ordering
  - Welcome Kit:
    - Add HTML report template
    - Add Issue and evidence templates
    - Update OWASP Top 10 methodology to latest version (2021)
  - Upgraded gems:
    - rails, rexml
  - Integration enhancements: 
    - Qualys: Add `cvss3_base`, `cvss3_temporal`, and `cvss3_version` as available vuln fields
  - Security Fixes:
    - High: Authenticated (author) persistent cross-site scripting

v4.14.0 (October 2024)
  - Kit Import: Use file name sequencing when a template file with the same name exists
  - Upgraded gems:
    - puma, rails, rexml
